--- a/composer.json
+++ b/composer.json
@@ -2,20 +2,15 @@
   "name": "arkye/arkye",
   "type": "project",
   "description": "The Arkye Framework.",
-  "keywords": [
-    "framework",
-    "laravel",
-    "arkye",
-    "ddd"
-  ],
+  "keywords": ["framework", "laravel", "arkye", "ddd"],
   "license": "MIT",
   "require": {
     "php": "^8.1",
     "arkye/repository": "^1.0",
-    "fruitcake/laravel-cors": "^2.0.5",
+    "arkye/support": "^1.0",
     "guzzlehttp/guzzle": "^7.2",
-    "laravel/framework": "^9.0",
-    "laravel/sanctum": "^2.14",
+    "laravel/framework": "^9.2",
+    "laravel/sanctum": "^2.14.1",
     "laravel/tinker": "^2.7"
   },
   "require-dev": {
